fixed wrapping in second block

--- a/src/components/SecondBlock/SecondBlock.scss
+++ b/src/components/SecondBlock/SecondBlock.scss
@@ -7,6 +7,7 @@
     gap: 9.5rem;
     counter-reset: counter;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .second__block-item {
